# tree-sitter-csharp-bindings

./: .gitignore  Build.targets  CMakeLists.txt  LICENSE  README.md  build.ps1  clone_all_language_repos.ps1  clone_git_repo.ps1  download_tree_sitter_repo.ps1  fix_sln.ps1  language_repos.txt  tree-sitter-csharp-bindings.sln
BindingsGenerator/: CMakeLists.txt  build.ps1
BindingsGenerator/src/: CCompilerPaths.cs  CSharpBindingsFix.cs  CsharpBindingsGenerator.cs  GenerateBindingsTestProgram.cs  GenerateLanguageCSharpBinding.cs  LanguageSourcePaths.cs  Program.cs
bindings-generator/: BindingsGenerator.csproj  CCompilerPaths.cs  CHeaderDllExporter.cs  CsharpBindingsGenerator.cs  FileExtensions.cs  GenerateLanguageCSharpBinding.cs  LanguageSourcePaths.cs  PathError.cs  Program.cs  README.md  TreeSitterPaths.cs  bindings-generator.csproj
bindings-generator/Properties/: launchSettings.json
bindings-test/: BindingsTest.csproj  Program.cs  README.md  bindings-test.csproj
libtree-sitter/: README.md  libtree-sitter.vcxproj  libtree-sitter.vcxproj.filters
libtree-sitter-python/: libtree-sitter-python.vcxproj  libtree-sitter-python.vcxproj.filters
tree-sitter-bindings/: Nothing.cs  README.md  TreeSitterBindings - Backup.csproj  TreeSitterBindings.csproj  tree-sitter-bindings.csproj
